New Website Version

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </div>
     <div class="ribbon-label">Aero Home™ Company</div>
     <div class="ribbon-buttons">
-      <a href="/about-us.html">ABOUT US</a>
+      <a href="/special-pages/about-us.html">ABOUT US</a>
       <a href="#services">OUR SERVICES</a>
-      <a href="#contact">REQUEST A QUOTE</a>
+      <a href="/special-pages/quote-form.html">REQUEST A QUOTE</a>
       <a href="#gallery">GALLERY</a>
-      <a href="pay.html">PAYMENT FORM</a>
+      <a href="/special-pages/pay.html">PAYMENT FORM</a>
     </div>
   </div>
 
@@ -65,44 +65,47 @@
 
   <!-- Services Section -->
   <section id="services" class="services">
-    <h1 class="services-title"><i class="fa-solid fa-minus"></i> OUR <span class="highlight-keyword">SERVICES</span>
-      <i class="fa-solid fa-minus"></i></h1>
+    <h1 class="services-title">
+      <i class="fa-solid fa-minus"></i> OUR <span class="highlight-keyword">SERVICES</span>
+      <i class="fa-solid fa-minus"></i>
+    </h1>
 
-        <h2 class="services-subtitle">Click to Learn More</h2>
+    <h2 class="services-subtitle">Click to Learn More</h2>
 
     <h2 class="services-category-1">OUTDOOR SERVICES</h2>
     <div class="services-row-one">
       <a href="/service-pages/landscape-page.html" class="service-card">
         <p class="service-description">LANDSCAPING</p>
         <img src="images/job1.webp" alt="Job 1" class="service-image" />
+        <span class="learn-more">LEARN MORE</span>
       </a>
       <a href="/service-pages/yard-page.html" class="service-card">
         <p class="service-description">YARD MAINTENANCE</p>
         <img src="images/job2.webp" alt="Job 2" class="service-image" />
+        <span class="learn-more">LEARN MORE</span>
       </a>
     </div>
 
     <h2 class="services-category-2">INDOOR SERVICES</h2>
     <div class="services-row-two">
-      <a href="/service-pages/painting-page.html" class="service-card">
+      <a href="/service-pages/walls-page.html" class="service-card">
         <p class="service-description">WALLS & PAINTING</p>
         <img src="images/job3.webp" alt="Job 3" class="service-image" />
+        <span class="learn-more">LEARN MORE</span>
       </a>
-      <a href="/service-pages/insulation-page.html" class="service-card">
-        <p class="service-description">HOME INSULATION</p>
+      <a href="/service-pages/flooring-page.html" class="service-card">
+        <p class="service-description">FLOORING & INSTALLATIONS</p>
         <img src="images/job4.webp" alt="Job 4" class="service-image" />
+        <span class="learn-more">LEARN MORE</span>
       </a>
     </div>
 
     <h2 class="services-category-3">OTHER SERVICES</h2>
     <div class="services-row-three">
-      <a href="/service-pages/handywork-page.html" class="service-card">
+      <a href="/service-pages/handy-page.html" class="service-card">
         <p class="service-description">HANDY WORK</p>
         <img src="images/job5.webp" alt="Job 5" class="service-image" />
-      </a>
-      <a href="/service-pages/flooring-page.html" class="service-card">
-        <p class="service-description">FLOORING & INSTALLATIONS</p>
-        <img src="images/job6.webp" alt="Job 6" class="service-image" />
+        <span class="learn-more">LEARN MORE</span>
       </a>
     </div>
 
@@ -151,7 +154,8 @@
     </div>
 
     <h2 class="pricing-note">
-      <i class="fa-solid fa-minus"></i> Prices vary by dimensions & material costs <i class="fa-solid fa-minus"></i>
+      <i class="fa-solid fa-minus"></i>'From pricing' implies average dimensons and costs. Prices vary<i
+        class="fa-solid fa-minus"></i>
     </h2>
   </section>
 
@@ -165,9 +169,11 @@
         <img src="images/missionphoto.webp" alt="Mission Image">
       </div>
       <p class="mission-text">
-        - At Aero, we are not just another company, but an experienced startup with a drive for better homes in the
-        community. We deliver top quality work, reliable service, and trusted solutions to every home project, while
-        staying within budget. Our top priorities are commitment, customer service, and a job well done.
+        - At Aero Home, we take pride in helping Lethbridge homeowners care for and improve their properties.
+        From paint & drywall, to lawncare and handy jobs, our focus stays simple: reliable service, fair pricing, and
+        results. Every project is completed with attention to detail, respect for your property and budget, and
+        clear communication. We're a locally owned team built on trust, and our job is to ensure every client feels
+        confident they chose the right team.
         <br><br>
         <i class="fas fa-lightbulb"></i> Locally Owned & Operated<br>
         <i class="fas fa-money-bill-1-wave"></i> Free estimates and competitive pricing<br>
@@ -191,6 +197,13 @@
         <img src="galleryimages/photo6.webp" alt="Gallery Photo 6" />
         <img src="galleryimages/photo7.webp" alt="Gallery Photo 7" />
         <img src="galleryimages/photo8.webp" alt="Gallery Photo 8" />
+        <img src="galleryimages/photo9.webp" alt="Gallery Photo 9" />
+        <img src="galleryimages/photo10.webp" alt="Gallery Photo 10" />
+        <img src="galleryimages/photo11.webp" alt="Gallery Photo 11" />
+        <img src="galleryimages/photo12.webp" alt="Gallery Photo 12" />
+        <img src="galleryimages/photo13.webp" alt="Gallery Photo 13" />
+        <img src="galleryimages/photo14.webp" alt="Gallery Photo 14" />
+        <img src="galleryimages/photo15.webp" alt="Gallery Photo 15" />
       </div>
     </div>
   </section>
@@ -219,7 +232,7 @@
       <input type="hidden" name="_captcha" value="false" />
       <input type="hidden" name="_template" value="table" />
       <input type="hidden" name="_subject" value="New Quote Request from aerohome.ca" />
-      <input type="hidden" name="_next" value="https://aerohome.ca/quote-thank.html" />
+      <input type="hidden" name="_next" value="https://aerohome.ca/thank-pages/quote-thank.html" />
 
       <button type="submit">Send Message</button>
     </form>
