--- a/service-pages/landscape-page.html
+++ b/service-pages/landscape-page.html
@@ -4,13 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Professional landscaping in Lethbridge, Alberta - Aero Home™ Company</title>
+
+  <title>Landscaping in Lethbridge, Alberta - Aero Home™ Company</title>
+
   <meta name="description"
-    content="Landscaping in Lethbridge made easy - get fast quotes, reliable service and affordable pricing that can't be beat. Click Here">
-  <meta name="keywords" content="stones, mulch, edging, pathway, patio, pergola, shrubs, trees, soil, compost, fertilizer, pruning, trimming, mowing, hedges,
-     borders, gravel, pavers, retaining, wall, gazebo, lighting, fountain, pond, decking, fencing, seating, garden, planter, arbor, vines, blossoms,
-      meadow, slope, erosion, hardscape, softscape, boulders, sod, wildflowers, topiary">
-  <link rel="stylesheet" href="/service-pages/landscape-page-style.css" />
+    content="Professional landscaping services in Lethbridge by Aero Home™. We design, build, and maintain beautiful outdoor spaces — from patios and fencing to lawns and gardens. Get your free quote today!">
+
+  <meta name="keywords"
+    content="landscaping Lethbridge, landscape design, lawn care, garden maintenance, patio installation, fencing, retaining walls, sod installation, shrubs, planting, stone pathways, trimming, irrigation, hardscaping, softscaping, landscape lighting, Aero Home, landscaping company Lethbridge, Alberta landscaping">
+
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Aero Home Company" />
+
+  <!-- Social / Open Graph -->
+  <meta property="og:title" content="Landscaping Services in Lethbridge | Aero Home™" />
+  <meta property="og:description"
+    content="Transform your yard with professional landscaping in Lethbridge. Aero Home™ creates stunning, durable outdoor spaces with expert craftsmanship and affordable pricing." />
+  <meta property="og:image" content="/images/landscaping-hero.webp" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://aerohome.ca/service-pages/landscape-page.html" />
+  <meta property="og:site_name" content="Aero Home™" />
+
+  <link rel="stylesheet" href="/service-pages/service-pages-style.css" />
   <link rel="icon" type="image/x-icon" href="/images/AeroLogo.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Hand:wght@400..700&display=swap" rel="stylesheet" />
@@ -26,15 +41,15 @@
     <div class="ribbon-label">Aero Home™ Company</div>
     <div class="ribbon-buttons">
       <a href="/index.html">BACK TO MAIN SITE</a>
-      <a href="/about-us.html">ABOUT US</a>
+      <a href="/special-pages/about-us.html">ABOUT US</a>
       <a href="#faq-section">FAQ</a>
-      <a href="/quote.html">REQUEST A QUOTE</a>
-      <a href="/pay.html">PAYMENT FORM</a>
+      <a href="/special-pages/quote-form.html">REQUEST A QUOTE</a>
+      <a href="/special-pages/pay.html">PAYMENT FORM</a>
     </div>
   </div>
 
   <!-- Hero Section -->
-  <header class="hero">
+  <header class="hero" style="background-image: url('/images/landscape-page-hero.webp');">
     <div class="hero-content">
       <div class="text-container">
         <h1><span class="highlight-keyword">LANDSCAPING</span></h1>
@@ -219,7 +234,7 @@
       <input type="hidden" name="_captcha" value="false" />
       <input type="hidden" name="_template" value="table" />
       <input type="hidden" name="_subject" value="New Quote Request from aerohome.ca" />
-      <input type="hidden" name="_next" value="https://aerohome.ca/quote-thank.html" />
+      <input type="hidden" name="_next" value="https://aerohome.ca/thank-pages/quote-thank.html" />
 
       <button type="submit">Send Message</button>
     </form>
