--- a/service-pages/yard-page.html
+++ b/service-pages/yard-page.html
@@ -4,18 +4,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fast and affordable lawn services in Lethbridge - Aero Home™ Company</title>
+
+  <title>Yard Work and Lawn Care in Lethbridge, Alberta - Aero Home™ Company</title>
+
   <meta name="description"
-    content="Got a lawn that needs mowing, a remake, or anything in-between? Get fast and affordable service for your lawn in Lethbridge - Click Here">
+    content="Keep your yard clean, healthy, and beautiful with Aero Home™. We provide professional yard work and lawn care in Lethbridge — including mowing, trimming, cleanup, and seasonal maintenance. Get your free quote today!">
+
   <meta name="keywords"
-    content="raking, mowing, trimming, edging, mulching, planting, weeding, pruning, clipping, digging, aerating, dethatching, seeding, fertilizing, 
-    composting, sweeping, blowing, bagging, hauling, lifting, shoveling, hoeing, tilling, spreading, gathering, mulching, stacking, cutting, hedging, 
-    clearing, collecting, chopping, bundling, staking, leveling, scraping, patching, hauling, pulling, scattering, disposing">
-  <link rel=" stylesheet" href="/service-pages/yard-page-style.css" />
+    content="yard work Lethbridge, lawn care, mowing, trimming, edging, aeration, fertilizing, yard cleanup, leaf removal, lawn maintenance, hedge trimming, seasonal cleanup, garden care, Lethbridge landscaping, Aero Home, Alberta lawn services, professional yard maintenance">
+
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Aero Home Company" />
+
+  <!-- Social / Open Graph -->
+  <meta property="og:title" content="Yard Work & Lawn Care in Lethbridge | Aero Home™" />
+  <meta property="og:description"
+    content="Professional yard work and lawn care services across Lethbridge. Aero Home™ keeps your property looking fresh, green, and well-maintained year-round." />
+  <meta property="og:image" content="/images/yard-hero.webp" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://aerohome.ca/service-pages/yard-page.html" />
+  <meta property="og:site_name" content="Aero Home™" />
+
+  <link rel="stylesheet" href="/service-pages/service-pages-style.css" />
   <link rel="icon" type="image/x-icon" href="/images/AeroLogo.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Hand:wght@400..700&display=swap" rel="stylesheet" />
 </head>
+
 
 <body>
 
@@ -27,15 +42,15 @@
     <div class="ribbon-label">Aero Home™ Company</div>
     <div class="ribbon-buttons">
       <a href="/index.html">BACK TO MAIN SITE</a>
-      <a href="/about-us.html">ABOUT US</a>
+      <a href="/special-pages/about-us.html">ABOUT US</a>
       <a href="#faq-section">FAQ</a>
-      <a href="/quote.html">REQUEST A QUOTE</a>
-      <a href="/pay.html">PAYMENT FORM</a>
+      <a href="/special-pages/quote-form.html">REQUEST A QUOTE</a>
+      <a href="/special-pages/pay.html">PAYMENT FORM</a>
     </div>
   </div>
 
   <!-- Hero Section -->
-  <header class="hero">
+  <header class="hero" style="background-image: url('/images/yard-page-hero.webp');">
     <div class="hero-content">
       <div class="text-container">
         <h1><span class="highlight-keyword">YARD SERVICES</span></h1>
@@ -220,7 +235,7 @@
       <input type="hidden" name="_captcha" value="false" />
       <input type="hidden" name="_template" value="table" />
       <input type="hidden" name="_subject" value="New Quote Request from aerohome.ca" />
-      <input type="hidden" name="_next" value="https://aerohome.ca/quote-thank.html" />
+      <input type="hidden" name="_next" value="https://aerohome.ca/thank-pages/quote-thank.html" />
 
       <button type="submit">Send Message</button>
     </form>
