Updated Index Page Media Queries

--- a/service-pages/flooring-page.html
+++ b/service-pages/flooring-page.html
@@ -63,7 +63,7 @@
   <!-- Showcase Section -->
   <section id="showcase" class="showcase">
     <h1 class="showcase-title">
-      <i class="fa-solid fa-minus"></i>YOUR HOME, <span class="highlight-keyword">INSTALLED</span>
+      <i class="fa-solid fa-minus"></i> INSTALLATIONS MADE <span class="highlight-keyword">EASY</span>
       <i class="fa-solid fa-minus"></i>
     </h1>
 
