--- a/service-pages/handy-page.html
+++ b/service-pages/handy-page.html
@@ -64,7 +64,7 @@
   <!-- Showcase Section -->
   <section id="showcase" class="showcase">
     <h1 class="showcase-title">
-      <i class="fa-solid fa-minus"></i>NEED THAT <span class="highlight-keyword">FAUCET</span> FIXED?
+      <i class="fa-solid fa-minus"></i> HANDY JUST GOT <span class="highlight-keyword">BETTER</span>
       <i class="fa-solid fa-minus"></i>
     </h1>
 
