--- a/service-pages/landscape-page.html
+++ b/service-pages/landscape-page.html
@@ -63,7 +63,7 @@
   <!-- Showcase Section -->
   <section id="showcase" class="showcase">
     <h1 class="showcase-title">
-      <i class="fa-solid fa-minus"></i>QUALITY MEETS <span class="highlight-keyword">BEAUTY</span>
+      <i class="fa-solid fa-minus"></i> BRINGING IDEAS TO <span class="highlight-keyword">LIFE</span>
       <i class="fa-solid fa-minus"></i>
     </h1>
 
