--- a/service-pages/walls-page.html
+++ b/service-pages/walls-page.html
@@ -64,7 +64,7 @@
   <!-- Showcase Section -->
   <section id="showcase" class="showcase">
     <h1 class="showcase-title">
-      <i class="fa-solid fa-minus"></i>INCREDIBLE <span class="highlight-keyword">DESIGN</span>
+      <i class="fa-solid fa-minus"></i> WALLS THAT <span class="highlight-keyword">DEFINE</span>
       <i class="fa-solid fa-minus"></i>
     </h1>
 
