--- a/special-pages/about-us.html
+++ b/special-pages/about-us.html
@@ -51,11 +51,13 @@
                 <img src="/images/missionphoto.webp" alt="Mission Image">
             </div>
             <p class="mission-text">
-                - At Aero, we are not just another company, but an experienced startup with a drive for better homes in
-                the
-                community. We deliver top quality work, reliable service, and trusted solutions to every home project,
-                while
-                staying within budget. Our top priorities are commitment, customer service, and a job well done.
+                - At Aero Home, we take pride in helping Lethbridge homeowners care for and improve their properties.
+                From paint & drywall, to lawncare and handy jobs, our focus stays simple: reliable service, fair
+                pricing, and
+                results. Every project is completed with attention to detail, respect for your property and budget, and
+                clear communication. We're a locally owned team built on trust, and our job is to ensure every client
+                feels
+                confident they chose the right team.
                 <br><br>
                 <i class="fas fa-lightbulb"></i> Locally Owned & Operated<br>
                 <i class="fas fa-money-bill-1-wave"></i> Free estimates and competitive pricing<br>
